<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qiliga_background"
    android:orientation="vertical" >

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dip"
            android:text="@string/login_str"
            android:textSize="@dimen/text_25dip"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/email_str"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPass_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha_str"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginGo_BT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:onClick="onClickLogin"
            android:text="@string/entrar_str" />

        <Button
            android:id="@+id/loginRegistro_BT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:text="@string/cadastrar_str" />

    </LinearLayout>    
</LinearLayout>